Fixed bug where visibility hidden was makng fade-out transition useless.

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -33,8 +33,13 @@
 .new-tweet form label {
     margin-left: 10px;
     color: red;
+    opacity: 100%;
+    transition-property: opacity;
+    transition-duration: 0.5s;
 }
 
 .new-tweet form label.hidden {
-    visibility: hidden;
+    opacity: 0%;
+    transition-property: opacity;
+    transition-duration: 0.5s;
 }
